--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testando!</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="container">
@@ -13,6 +13,6 @@
         <input type="text" name="campo" id="campo" placeholder="Escreva qualquer coisa!">
         <input type="button" value="testando!" id="btn" onclick="testando()">
     </div>
-    <script src="main.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
